--- a/index.html
+++ b/index.html
@@ -3134,7 +3134,7 @@
         height: 700,
         transition: "slide",
         backgroundTransition: "slide",
-        center: false
+        center: false,
   			dependencies: [
   				{ src: 'plugin/markdown/marked.js' },
   				{ src: 'plugin/markdown/markdown.js' },
