--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-alpha/dist/katex.min.css" integrity="sha384-BTL0nVi8DnMrNdMQZG1Ww6yasK9ZGnUxL1ZWukXQ7fygA1py52yPp9W4wrR00VML" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0-alpha/dist/katex.min.js" integrity="sha384-y6SGsNt7yZECc4Pf86XmQhC4hG2wxL6Upkt9N1efhFxfh6wlxBH0mJiTE8XYclC1" crossorigin="anonymous"></script>
 	</head>
 	<body>
     <div class="theme-font-montserrat theme-color-white-blue" style="width: 100%; height: 100%;">
@@ -3440,6 +3442,9 @@
   				{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
   			]
   		});
-  	</script>
+      Reveal.addEventListener( 'slidechanged', function( event ) {
+          MathJax.Hub.Rerender(event.currentSlide);
+      });
+    </script>
 	</body>
 </html>
